[gd_scene load_steps=22 format=3 uid="uid://dkqiqjkjg68fw"]

[ext_resource type="Script" path="res://Enemies/arrow.gd" id="1_xddjm"]
[ext_resource type="Texture2D" uid="uid://dcis4fijacwi6" path="res://Effects/4.png" id="2_rq8s6"]
[ext_resource type="PackedScene" uid="uid://dya1gj5i5dc2d" path="res://Overlap/hitbox.tscn" id="3_f5ayc"]
[ext_resource type="AudioStream" uid="uid://j0eohys5ih2n" path="res://Audio/Fire/fire-spell-100276.mp3" id="4_ca56m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d0wx0"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hbv3b"]
radius = 3.0

[sub_resource type="Gradient" id="Gradient_jhhwm"]
offsets = PackedFloat32Array(0, 0.475983, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.734791, 0.205954, 2.88785e-07, 1, 0.983868, 0.104571, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4ff3j"]
gradient = SubResource("Gradient_jhhwm")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kmw7i"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.7
direction = Vector3(-1, 0, 0)
spread = 60.0
initial_velocity_min = 40.0
initial_velocity_max = 60.0
gravity = Vector3(0, 0, 0)
color = Color(0.945098, 0.690196, 0.588235, 1)
color_ramp = SubResource("GradientTexture1D_4ff3j")
turbulence_noise_strength = 9.22
turbulence_noise_scale = 1.736

[sub_resource type="Gradient" id="Gradient_21kff"]
offsets = PackedFloat32Array(0, 0.68)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7u2do"]
gradient = SubResource("Gradient_21kff")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_x54he"]
offsets = PackedFloat32Array(0.0131004, 0.524017, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.754137, 0.453906, 0.00110478, 1, 0.645128, 3.76623e-06, 0.0178451, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ntl6i"]
gradient = SubResource("Gradient_x54he")

[sub_resource type="Curve" id="Curve_yga4t"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.980545, 0.32577), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_e46cc"]
curve = SubResource("Curve_yga4t")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nd1ri"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 30.0
initial_velocity_max = 30.0
gravity = Vector3(0, 50, 0)
scale_min = 2.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_e46cc")
color_ramp = SubResource("GradientTexture1D_ntl6i")

[sub_resource type="Environment" id="Environment_6s2k7"]
background_mode = 3
glow_intensity = 3.61
glow_strength = 1.24
glow_blend_mode = 0
glow_hdr_scale = 0.81

[sub_resource type="Animation" id="Animation_4alkt"]
resource_name = "Fly"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_y5dvs"]
resource_name = "Hit"
length = 0.95
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ExplosionParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Hitbox:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../PointLight2D:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../PointLight2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1e-05, 1e-05)]
}
tracks/7/type = "audio"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../AudioStreamPlayer")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_ca56m")
}],
"times": PackedFloat32Array(0)
}
tracks/7/use_blend = true

[sub_resource type="Animation" id="Animation_btnik"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ExplosionParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Hitbox:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../PointLight2D:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../PointLight2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b3vqp"]
_data = {
"Fly": SubResource("Animation_4alkt"),
"Hit": SubResource("Animation_y5dvs"),
"RESET": SubResource("Animation_btnik")
}

[node name="fire" type="Node2D"]
z_index = 3
script = ExtResource("1_xddjm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rq8s6")
hframes = 4

[node name="Hitbox" parent="." instance=ExtResource("3_f5ayc")]
visible = false
collision_layer = 8
monitoring = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_d0wx0")

[node name="ImpactDetector" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactDetector"]
shape = SubResource("CircleShape2D_hbv3b")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-11, 0)
amount = 20
process_material = SubResource("ParticleProcessMaterial_kmw7i")
lifetime = 0.3
explosiveness = 0.2

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.756863, 0.478431, 0.243137, 1)
texture = SubResource("GradientTexture2D_7u2do")

[node name="Timer" type="Timer" parent="."]

[node name="ExplosionParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_nd1ri")
lifetime = 0.6
one_shot = true
speed_scale = 1.5
explosiveness = 1.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6s2k7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_b3vqp")
}
autoplay = "Fly"

[connection signal="body_entered" from="ImpactDetector" to="." method="_on_impact_detector_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]

[editable path="Hitbox"]
